--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 
 .form-area {
   padding-top: 7%;
+  margin: 10px;
 }
 
 .row.single-form {
@@ -43,7 +44,7 @@
 }
 
 .right {
-  padding: 70px 100px;
+  padding: 70px 10px;
   position: relative;
 }
 .right i {
